--- a/Style/main.css
+++ b/Style/main.css
@@ -42,7 +42,7 @@ body {
   padding: 0;
 }
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .icon {
   display: flex;
