--- a/Style/main.css
+++ b/Style/main.css
@@ -40,6 +40,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 * {
   font-family: 'Roboto', sans-serif;
@@ -121,7 +122,6 @@ body {
   user-select: none;
   display: flex;
   line-height: var(--line-height-input);
-  overflow: hidden;
   transition: var(--transition-1);
 }
 .tab-icon-line .tab {
@@ -163,6 +163,9 @@ body {
 }
 .tab-icon-line .space .icon {
   opacity: 0;
+}
+#content-tab2 {
+  display: none;
 }
 #map {
   position: absolute;
