--- a/Style/main.less
+++ b/Style/main.less
@@ -348,7 +348,10 @@ body {
         .icon {
             padding: var(--padding-C);
         }
-
+        .non-interactive {
+            padding: 0;
+            pointer-events: none;
+        }
         svg {
             width: 12px;
             height: 12px;
@@ -406,7 +409,7 @@ body {
 
             .number {
                 font-size: 30px;
-                font-weight: 400;
+                font-weight: 00;
                 display: flex;
                 align-items: baseline;
 
